fix on mobile even better

--- a/app/javascript/components/pages/Home.module.scss
+++ b/app/javascript/components/pages/Home.module.scss
@@ -48,7 +48,8 @@
 		text-align: center;
 	}
 
-	.lastArtigos {
+	.outerDiv {
+		margin: 0 1rem;
 	}
 
 	.findMore {
